Resolves #1 by making the ul-li inline.

--- a/webpage.html
+++ b/webpage.html
@@ -2,34 +2,47 @@
 
 <html>
 
-<body style= "background-color: grey">
-
 <head>
 	<meta charset = 'utf-8'>
 
+<style>
+	div{
+		align-content: center;
+	}
+li{
+
+	display: inline;
+	padding: 50px;
+}
+
+</style>
 </head>
 
+<body style= "background-color: #4B4943">
 
-<div style= "background-color: black">
+<header>
 
-<h1 style="text-align: left; color:grey"> To The New </h1>
-ul{
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 16px;
-  text-decoration: none;
-}
-	<ul style="color: white">
-		<li>blah blah</li>
-		<li>blah blah</li>
-		<li>blah blah</li>
-		<li>blah blah</li>
-		<li>blah blah</li>
-	</ul>
+  <nav style="background-color: black; margin: 0; padding: 0; ">
+   <h1 style="text-align: left; color:grey; background-color: #4B4943;"> To The New </h1>
+
+   <div style="position: relative; background-color: #000000; width: 960px; height: 40px; margin-top: 20px; margin-bottom: 20px ">
+   		<ul style="padding: 20px; list-style-type: none; text-align: center; ">
+    		<li><a href="">Text Link</a></li>
+    		<li><a href="">Text Link</a></li>
+    		<li><a href="">Text Link</a></li>
+   		</ul>
+   </div>
+  
+  </nav> 
+</header>
+
+<div align="center" style="position: relative; width:960px; height:360px; background-color: black; margin-left: 140px">
+	
+	<h3 style="color: white; align-self: center;">960x360</h3>
+
 </div>
 
-
+<div style="position: relative; width: 960px; height: 50px; background-color: #9f9c93; margin-left: 140px; margin-top: 20px ">
 
 </body>
 
