--- a/webpage.html
+++ b/webpage.html
@@ -26,7 +26,7 @@ li{
    <h1 style="text-align: left; color:grey; background-color: #4B4943;"> To The New </h1>
 
    <div style="position: relative; background-color: #000000; width: 960px; height: 40px; margin-top: 20px; margin-bottom: 20px ">
-   		<ul style="padding: 20px; list-style-type: none; text-align: center; ">
+   		<ul style="padding: 20px; list-style-type: none; ">
     		<li><a href="">Text Link</a></li>
     		<li><a href="">Text Link</a></li>
     		<li><a href="">Text Link</a></li>
@@ -44,6 +44,38 @@ li{
 
 <div style="position: relative; width: 960px; height: 50px; background-color: #9f9c93; margin-left: 140px; margin-top: 20px ">
 
+</div>
+
+<ul>
+	<li><div id = "box1">
+    <div id = "b1text">
+        <b>215 X 315px</b>
+    </div>
+</div>
+	</li>
+
+	<li><div id = "box1">
+    <div id = "b1text">
+        <b>215 X 315px</b>
+    </div>
+</div>
+	</li>
+
+	<li><div id = "box1">
+    <div id = "b1text">
+        <b>215 X 315px</b>
+    </div>
+</div>
+	</li>
+
+	<li><div id = "box1">
+    <div id = "b1text">
+        <b>215 X 315px</b>
+    </div>
+</div>
+	</li>
+
+</ul>
 </body>
 
 </html>
