--- a/webpage.html
+++ b/webpage.html
@@ -7,12 +7,24 @@
 
 <style>
 	div{
+		position: relative;
+		margin-left: 6%;
+		margin-right: 6%;
 		align-content: center;
+		text-align: center;
+		padding-top: 4%;
+		background-color: #000000;
 	}
 li{
 
+	display: inline-block;
+	padding-left: 20%;
+	padding: 20px;
+	float: left;
+	overflow: hidden;
+}
+ul{
 	display: inline;
-	padding: 50px;
 }
 
 </style>
@@ -22,11 +34,11 @@ li{
 
 <header>
 
-  <nav style="background-color: black; margin: 0; padding: 0; ">
+  <nav style="background-color: black; margin-left: 6%; margin-right: 6%; padding: 2%; text-align: left; ">
    <h1 style="text-align: left; color:grey; background-color: #4B4943;"> To The New </h1>
 
-   <div style="position: relative; background-color: #000000; width: 960px; height: 40px; margin-top: 20px; margin-bottom: 20px ">
-   		<ul style="padding: 20px; list-style-type: none; ">
+   <div style="position: relative; background-color: #000000; width: 960px; height: 40px; margin-top: 5%; margin-bottom: 5% ">
+   		<ul style="padding: 12%; list-style-type: none; ">
     		<li><a href="">Text Link</a></li>
     		<li><a href="">Text Link</a></li>
     		<li><a href="">Text Link</a></li>
@@ -36,46 +48,45 @@ li{
   </nav> 
 </header>
 
-<div align="center" style="position: relative; width:960px; height:360px; background-color: black; margin-left: 140px">
+<div style="background-color: white; position: relative; margin-left: 10%; margin-right: 10%; width: 960px; height: auto; margin-bottom: 0%;">
+	<div style="position: relative; width:960px; height:360px; background-color: black; margin-left: 140px">
 	
-	<h3 style="color: white; align-self: center;">960x360</h3>
-
+		<h3 style="color: white; align-self: center;">960x360</h3>
+	
+	</div>
+	
+	<div style="position: relative; width: 960px; height: 50px; background-color: #9f9c93; margin-left: 140px; margin-top: 20px ">
+	
+	</div>
+	
+	<ul>
+		<li>
+			<div style="background-color: #000000; color: white; width: 215px; height: 215px; margin: 0px;">
+				215x315px
+			</div>
+		</li>
+	
+		<li>
+			<div style="background-color: #000000; color: white; width: 215px; height: 215px; margin: 0px;">
+				215x315px
+			</div>
+		</li>
+	
+		<li>
+			<div style="background-color: #000000; color: white; width: 215px; height: 215px; margin: 0px;">
+			215x315px
+			</div>
+		</li>
+	
+		<li>
+			<div style="position: relative; background-color: #000000; color: white; width: 215px; height: 215px; margin: 0px;">
+				215x315px
+			</div>
+		</li>
+	
+	</ul>
 </div>
 
-<div style="position: relative; width: 960px; height: 50px; background-color: #9f9c93; margin-left: 140px; margin-top: 20px ">
-
-</div>
-
-<ul>
-	<li><div id = "box1">
-    <div id = "b1text">
-        <b>215 X 315px</b>
-    </div>
-</div>
-	</li>
-
-	<li><div id = "box1">
-    <div id = "b1text">
-        <b>215 X 315px</b>
-    </div>
-</div>
-	</li>
-
-	<li><div id = "box1">
-    <div id = "b1text">
-        <b>215 X 315px</b>
-    </div>
-</div>
-	</li>
-
-	<li><div id = "box1">
-    <div id = "b1text">
-        <b>215 X 315px</b>
-    </div>
-</div>
-	</li>
-
-</ul>
 </body>
 
 </html>
